# compact

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_compactc.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  add_headers.py  clean.sh  compiler.md  dist-workspace.toml  flake.nix  header_config.json  nvfetcher.toml  release.toml  run-debug-test.sh  run-e2e-tests.sh
tools/compact/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
tools/compact/contract/: invalid_contract.compact
tools/compact/output/check/: err_invalid_param.txt  std_check_help.txt  std_check_help_short.txt  std_default.txt  std_default_version.txt
tools/compact/output/clean/: err_invalid_param.txt  err_invalid_version.txt  std_clean_help.txt  std_clean_help_short.txt  std_clean_latest.txt  std_clean_other.txt  std_default.txt  std_default_version.txt
tools/compact/output/compile/: err_compiling.txt  err_default.txt  err_invalid_compiler.txt  err_invalid_compiler_dir.txt  std_compile_old_zkir.txt  std_compiling_pre_0250.txt  std_default.txt  std_non_latest.txt  std_oldest.txt
tools/compact/output/fixup/: err_invalid_param.txt  err_no_compiler_installed.txt  std_fixup_help.txt  std_fixup_help_short.txt  std_fixup_version.txt
tools/compact/output/format/: err_default.txt  err_format_verbose_one_file_fail.txt  err_invalid_param.txt  err_no_compiler.txt  err_verbose_check_two_files.txt  std_default_version.txt  std_format_help.txt  std_format_help_short.txt  std_format_verbose_three_files.txt  std_format_verbose_two_files.txt
tools/compact/output/help/: err_invalid_param.txt  std_default.txt  std_default_env.txt  std_short.txt  std_version.txt
tools/compact/output/list/: err_invalid_param.txt  std_024_selected.txt  std_default.txt  std_default_version.txt  std_latest_selected.txt  std_list_help.txt  std_list_help_short.txt  std_list_installed.txt  std_oldest_selected.txt  std_previous_selected.txt
tools/compact/output/other/: err_invalid_command.txt  err_two_commands.txt
tools/compact/output/scenarios/: sc12_keep_latest.txt  sc13_keep_previous.txt  sc14_clean_three_versions.txt  sc15_keep_latest.txt  sc16_list_installed.txt  sc17_previous_selected.txt  sc18_list_installed.txt  sc18_no_default_set.txt  sc28_err_format_check_example_1.txt  sc29_err_format_check_example_2.txt  sc2_std_already_installed.txt  sc36_err_format_verbose.txt  sc36_std_format_verbose.txt  sc39_err_format_check_example_1_2.txt  sc6_std_clean.txt  sc6a_std_clean.txt
tools/compact/output/self/: err_invalid_param.txt  (+4 more)
tools/compact/src/: command_line_arguments.rs  compact_directory.rs  compiler.rs  compiler_legacy.rs  console.rs  fetch.rs  file.rs  fixup.rs  formatter.rs  http.rs  lib.rs  progress.rs  utils.rs
tools/compact/tests/: test_check.rs  test_clean.rs  test_compile.rs  test_fixup.rs  test_format.rs  test_help.rs  test_list.rs  test_other.rs  test_scenarios.rs  test_scenarios_four.rs  test_scenarios_three.rs  test_scenarios_two.rs  test_self.rs  test_self_scenarios.rs  test_update.rs
(+823 files in other folders)
