# This file is part of Compact.
# Copyright (C) 2025 Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# 	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = ["tools/*"]

[workspace.package]
version = "0.2.0"
authors = ["Midnight Foundation"]
edition = "2024"
rust-version = "1.88.0"
description = "Manages multiple versions of the compact toolchain"
homepage = "https://docs.midnight.network"
repository = "https://github.com/midnightntwrk/compact"
license = "Apache-2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
