# This file is part of Compact.
# Copyright (C) 2025 Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# 	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "compact"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.94"
axoupdater = { version = "0.9.0", default-features = false, features = [
  "github_releases",
] }
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
console = "0.16.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
futures = "0.3.31"
ignore = "0.4.23"
indicatif = "0.18.0"
octocrab = "0.44.1"
pretty_assertions = "1.4.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
  "stream",
] }
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
similar = "2.7.0"
tokio = { version = "1.42.0", features = ["full", "macros"] }

[dev-dependencies]
cargo-nextest = "0.9.97"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
wiremock = "0.6.4"

